--- a/src/SerialLoops/Controls/OptionsGroup.axaml
+++ b/src/SerialLoops/Controls/OptionsGroup.axaml
@@ -3,5 +3,6 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+             Margin="5" Padding="5"
              x:Class="SerialLoops.Controls.OptionsGroup">
 </UserControl>
