--- a/src/SerialLoops/Views/Dialogs/PreferencesDialog.axaml
+++ b/src/SerialLoops/Views/Dialogs/PreferencesDialog.axaml
@@ -16,26 +16,26 @@
         Title="{x:Static assets:Strings.Preferences}">
     <DockPanel>
         <StackPanel Spacing="5" Margin="5">
-            <TabControl>
+            <TabControl IsTabStop="True">
                 <TabControl.Items>
-                    <TabItem Header="Serial Loops">
-                        <controls:OptionsGroup Name="SerialLoopsOptions" Width="500" />
+                    <TabItem Header="Serial Loops" Name="SerialLoopsTab">
+                        <controls:OptionsGroup Name="SerialLoopsOptions" Width="500"/>
                     </TabItem>
-                    <TabItem Header="{x:Static assets:Strings.Projects}">
-                        <controls:OptionsGroup Name="ProjectOptions" Width="500" />
+                    <TabItem Header="{x:Static assets:Strings.Projects}" Name="ProjectsTab">
+                        <controls:OptionsGroup Name="ProjectOptions" Width="500"/>
                     </TabItem>
-                    <TabItem Header="{x:Static assets:Strings.Build}">
-                        <controls:OptionsGroup Name="BuildOptions" Width="500" />
+                    <TabItem Header="{x:Static assets:Strings.Build}" Name="BuildTab">
+                        <controls:OptionsGroup Name="BuildOptions" Width="500"/>
                     </TabItem>
                 </TabControl.Items>
             </TabControl>
             <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" Spacing="5" Width="500">
                 <StackPanel Orientation="Horizontal" Spacing="5" Margin="5">
-                    <Button Content="{x:Static assets:Strings.Save}" Command="{Binding SaveCommand}"/>
-                    <Button Content="{x:Static assets:Strings.Cancel}" Command="{Binding CancelCommand}" IsCancel="True"/>
+                    <Button Content="{x:Static assets:Strings.Save}" Command="{Binding SaveCommand}" Name="SaveButton"/>
+                    <Button Content="{x:Static assets:Strings.Cancel}" Command="{Binding CancelCommand}" IsCancel="True" Name="CancelButton"/>
                 </StackPanel>
-                <controls:LabelWithIcon IsVisible="{Binding RequireRestart}"
-                                        Text="{x:Static assets:Strings.Restart_required}" Icon="Warning" />
+                <controls:LabelWithIcon Name="RestartRequiredLabel" IsVisible="{Binding RequireRestart}"
+                                        Text="{x:Static assets:Strings.Restart_required}" Icon="Warning"/>
             </StackPanel>
         </StackPanel>
     </DockPanel>
