--- a/src/SerialLoops/Views/Editors/BackgroundEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/BackgroundEditorView.axaml
@@ -7,13 +7,14 @@
              xmlns:ia="using:Avalonia.Xaml.Interactions.Core"
              xmlns:assets="using:SerialLoops.Assets"
              xmlns:controls="using:SerialLoops.Controls"
+             xmlns:utility="using:SerialLoops.Utility"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:DataType="vm:BackgroundEditorViewModel"
              x:Class="SerialLoops.Views.Editors.BackgroundEditorView">
     <ScrollViewer>
         <StackPanel Orientation="Vertical" Spacing="5" HorizontalAlignment="Left" VerticalAlignment="Top">
-            <controls:SKBitmapCanvas Source="{Binding BgBitmap}"
-                                     Width="{Binding BgBitmap.Width}" Height="{Binding BgBitmap.Height}"/>
+            <Image Source="{Binding BgBitmap, Converter={x:Static utility:SLConverters.SKBitmapToAvaloniaConverter}}"
+                   Width="{Binding BgBitmap.Width}" Height="{Binding BgBitmap.Height}"/>
             <TextBlock Text="{Binding BgDescription}"/>
             <StackPanel Orientation="Horizontal" Spacing="3">
                 <Button Content="{x:Static assets:Strings.Export}" Command="{Binding ExportCommand}"/>
