--- a/src/SerialLoops/Views/Panels/ItemExplorerPanel.axaml
+++ b/src/SerialLoops/Views/Panels/ItemExplorerPanel.axaml
@@ -4,6 +4,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:panels="using:SerialLoops.Views.Panels"
+             xmlns:i="using:Avalonia.Xaml.Interactivity"
+             xmlns:ia="using:Avalonia.Xaml.Interactions.Core"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:DataType="vm:ItemExplorerPanelViewModel"
              x:Class="SerialLoops.Views.Panels.ItemExplorerPanel">
@@ -13,7 +15,13 @@
     </Design.DataContext>
     
     <Grid RowDefinitions="Auto,*">
-        <TextBox Grid.Row="0" Name="Search"/>
+        <TextBox Grid.Row="0" Name="Search">
+            <i:Interaction.Behaviors>
+                <ia:EventTriggerBehavior EventName="TextChanged" SourceObject="{Binding #Search}">
+                    <ia:InvokeCommandAction Command="{Binding SearchCommand}" CommandParameter="{Binding #Search.Text}"/>
+                </ia:EventTriggerBehavior>
+            </i:Interaction.Behaviors>
+        </TextBox>
         <ScrollViewer Grid.Row="1">
             <TreeView Name="Viewer" SelectionMode="Single"/>
         </ScrollViewer>
