--- a/src/SerialLoops/Views/Editors/CharacterSpriteEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/CharacterSpriteEditorView.axaml
@@ -16,7 +16,7 @@
         <controls:AnimatedImage DataContext="{Binding AnimatedImage}" />
         <StackPanel Orientation="Horizontal" Spacing="5">
             <StackPanel Orientation="Horizontal" Spacing="3" VerticalAlignment="Center">
-                <TextBlock>Character</TextBlock>
+                <TextBlock Text="{x:Static assets:Strings.Character}"/>
                 <ComboBox ItemsSource="{Binding Characters}" SelectedItem="{Binding Character}">
                     <ComboBox.ItemTemplate>
                         <DataTemplate DataType="libitems:CharacterItem">
@@ -25,12 +25,12 @@
                     </ComboBox.ItemTemplate>
                 </ComboBox>
             </StackPanel>
-            <CheckBox IsChecked="{Binding IsLarge}">Is Large</CheckBox>
+            <CheckBox IsChecked="{Binding IsLarge}" Content="{x:Static assets:Strings.Is_Large}"/>
         </StackPanel>
-        <Button Command="{Binding ReplaceCommand}">Replace Sprite</Button>
+        <Button Command="{Binding ReplaceCommand}" Content="{x:Static assets:Strings.Replace_Sprite}"/>
         <StackPanel Orientation="Horizontal" Spacing="3">
-            <Button Name="ExportFramesButton" Command="{Binding ExportFramesCommand}">Export Frames</Button>
-            <Button Name="ExportGIFButton" Command="{Binding ExportGIFCommand}">Export GIF</Button>
+            <Button Name="ExportFramesButton" Command="{Binding ExportFramesCommand}" Content="{x:Static assets:Strings.Export_Frames"/>
+            <Button Name="ExportGIFButton" Command="{Binding ExportGIFCommand}" Content="{x:Static assets:Strings.Export_GIF}"/>
         </StackPanel>
     </StackPanel>
 </UserControl>
