--- a/src/SerialLoops/Views/Editors/VoicedLineEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/VoicedLineEditorView.axaml
@@ -19,10 +19,24 @@
             <Button Content="{x:Static assets:Strings.Restore}"/>
         </StackPanel>
         <gbox:GroupBox Header="{x:Static assets:Strings.Edit_Subtitle}" Theme="{StaticResource GroupBoxClassic}" Margin="5"
-                       IsVisible="{Binding SubsEnabled}">
-            <StackPanel Spacing="3" Orientation="Horizontal">
-                <TextBlock Text="{x:Static assets:Strings.Subtitle_Text}"/>
-                <TextBox Text="{Binding Subtitle, Mode=TwoWay}" Watermark="{x:Static assets:Strings.Enter_subtitle_text___}" Width="400"/>
+                       IsVisible="{Binding SubsEnabled}" Grid.Row="2" Grid.Column="0">
+            <StackPanel Spacing="5" Orientation="Vertical">
+                <StackPanel Spacing="3" Orientation="Horizontal">
+                    <TextBlock Text="{x:Static assets:Strings.Subtitle_Text}"/>
+                    <TextBox Text="{Binding Subtitle, Mode=TwoWay}" Watermark="{x:Static assets:Strings.Enter_subtitle_text___}" Width="400"/>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Spacing="20">
+                    <StackPanel Spacing="3" Orientation="Horizontal" VerticalAlignment="Center">
+                        <TextBlock Text="{x:Static assets:Strings.Target_Screen}"/>
+                        <controls:ScreenSelector DataContext="{Binding ScreenSelector}"/>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Spacing="3">
+                        <TextBlock Text="{x:Static assets:Strings.Screen_Position}"/>
+                        <StackPanel Orientation="Vertical" Spacing="2">
+                            <!--<RadioButton GroupName="YPos" IsChecked="{Binding "-->
+                        </StackPanel>
+                    </StackPanel>
+                </StackPanel>
             </StackPanel>
         </gbox:GroupBox>
     </Grid>
