--- a/src/SerialLoops/Controls/ScreenSelector.axaml
+++ b/src/SerialLoops/Controls/ScreenSelector.axaml
@@ -12,14 +12,20 @@
              x:Class="SerialLoops.Controls.ScreenSelector">
     <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Spacing="5">
         <StackPanel Orientation="Vertical" Spacing="2">
-            <Button Width="35" Height="20" Command="{Binding SelectTopCommand}" ToolTip.Tip="{x:Static assets:Strings.Top_Screen}"
-                    IsEnabled="{Binding SelectedScreen, Converter={x:Static utility:SLConverters.TopScreenSelectableConverter}}">
-                <Svg Path="avares://SerialLoops/Assets/Icons/Top_Screen.svg"/>
-            </Button>
-            <Button Width="35" Height="20" Command="{Binding SelectBottomCommand}" ToolTip.Tip="{x:Static assets:Strings.Bottom_Screen}"
-                    IsEnabled="{Binding SelectedScreen, Converter={x:Static utility:SLConverters.BottomScreenSelectableConverter}}">
-                <Svg Path="avares://SerialLoops/Assets/Icons/Bottom_Screen.svg"/>
-            </Button>
+            <Border BorderThickness="2" CornerRadius="3"
+                    BorderBrush="{Binding #TopButton.IsEnabled, Converter={x:Static utility:SLConverters.BooleanBrushConverter}}">
+                <Button Name="TopButton" Width="35" Height="20" Command="{Binding SelectTopCommand}" ToolTip.Tip="{x:Static assets:Strings.Top_Screen}"
+                        IsEnabled="{Binding SelectedScreen, Converter={x:Static utility:SLConverters.TopScreenSelectableConverter}}">
+                    <Svg Path="avares://SerialLoops/Assets/Icons/Top_Screen.svg" Width="35" Height="20"/>
+                </Button>
+            </Border>
+            <Border BorderThickness="2" CornerRadius="3"
+                    BorderBrush="{Binding #BottomButton.IsEnabled, Converter={x:Static utility:SLConverters.BooleanBrushConverter}}">
+                <Button Name="BottomButton" Width="35" Height="20" Command="{Binding SelectBottomCommand}" ToolTip.Tip="{x:Static assets:Strings.Bottom_Screen}"
+                        IsEnabled="{Binding SelectedScreen, Converter={x:Static utility:SLConverters.BottomScreenSelectableConverter}}">
+                    <Svg Path="avares://SerialLoops/Assets/Icons/Bottom_Screen.svg" Width="35" Height="20"/>
+                </Button>
+            </Border>
         </StackPanel>
         <CheckBox Name="BothCheckBox" IsVisible="{Binding AllowSelectingBoth}" Content="{x:Static assets:Strings.Both}"
                   IsChecked="{Binding SelectedScreen, Converter={x:Static utility:SLConverters.BothScreensSelectedConverter}}">
