--- a/src/SerialLoops/Views/Editors/ScenarioEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/ScenarioEditorView.axaml
@@ -6,12 +6,35 @@
              xmlns:i="using:Avalonia.Xaml.Interactivity"
              xmlns:ia="using:Avalonia.Xaml.Interactions.Core"
              xmlns:assets="using:SerialLoops.Assets"
+             xmlns:editor="using:SerialLoops.ViewModels.Editors.ScenarioCommandEditors"
              xmlns:models="using:SerialLoops.Models"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:DataType="vm:ScenarioEditorViewModel"
              x:Class="SerialLoops.Views.Editors.ScenarioEditorView">
-    <Grid RowDefinitions="*" ColumnDefinitions="Auto,*">
-        <ListBox Name="CommandsBox" MinWidth="280" MinHeight="185" ItemsSource="{Binding Commands}">
+    <Grid RowDefinitions="Auto,*" ColumnDefinitions="Auto,*">
+        <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Right"
+                    Width="{Binding #CommandsBox.Width}" Spacing="5" Margin="5">
+            <Button ToolTip.Tip="Add Command" Width="22" Command="{Binding AddCommand}">
+                <Svg Path="avares://SerialLoops/Assets/Icons/Add.svg" Width="22"/>
+            </Button>
+            <Button ToolTip.Tip="Remove Command" Width="22" Command="{Binding DeleteCommand}"
+                    IsEnabled="{Binding SelectedCommand, Converter={x:Static ObjectConverters.IsNotNull}}">
+                <Svg Path="avares://SerialLoops/Assets/Icons/Remove.svg" Width="22"/>
+            </Button>
+            <Button ToolTip.Tip="Clear Scenario" Width="22" Command="{Binding ClearCommand}">
+                <Svg Path="avares://SerialLoops/Assets/Icons/Clear.svg" Width="22"/>
+            </Button>
+            <Button ToolTip.Tip="Move Command Up" Width="22" Command="{Binding UpCommand}"
+                    IsEnabled="{Binding SelectedCommand, Converter={x:Static ObjectConverters.IsNotNull}}">
+                <Svg Path="avares://SerialLoops/Assets/Icons/Move_Up.svg" Width="22"/>
+            </Button>
+            <Button ToolTip.Tip="Move Command Down" Width="22" Command="{Binding DownCommand}"
+                    IsEnabled="{Binding SelectedCommand, Converter={x:Static ObjectConverters.IsNotNull}}">
+                <Svg Path="avares://SerialLoops/Assets/Icons/Move_Down.svg" Width="22"/>
+            </Button>
+        </StackPanel>
+        <ListBox Name="CommandsBox" MinWidth="280" MinHeight="185" ItemsSource="{Binding Commands}"
+                 SelectedItem="{Binding SelectedCommand}" Grid.Column="0" Grid.Row="1">
             <ListBox.ItemTemplate>
                 <DataTemplate x:DataType="models:PrettyScenarioCommand">
                     <StackPanel Orientation="Horizontal" Spacing="3">
@@ -20,12 +43,13 @@
                     </StackPanel>
                 </DataTemplate>
             </ListBox.ItemTemplate>
-            <!--<i:Interaction.Behaviors>
-                <ia:EventTriggerBehavior EventName="SelectionChanged" SourceObject="{Binding #CommandsBox}">
-                    <ia:InvokeCommandAction Command="{Binding CommandsBoxSelectionChanged}" CommandParameter="{Binding #CommandsBox.SelectedIndex}"/>
-                </ia:EventTriggerBehavior>
-            </i:Interaction.Behaviors>-->
         </ListBox>
-        
+        <ContentPresenter Grid.Row="1" Grid.Column="1" Content="{Binding CurrentCommandViewModel}">
+            <ContentPresenter.ContentTemplate>
+                <DataTemplate DataType="editor:ScenarioCommandEditorViewModel">
+                    <TextBlock Text="{Binding Test}"/>
+                </DataTemplate>
+            </ContentPresenter.ContentTemplate>
+        </ContentPresenter>
     </Grid>
 </UserControl>
