A beautiful data grid tree for item list panel

--- a/src/SerialLoops/Views/Panels/ItemExplorerPanel.axaml
+++ b/src/SerialLoops/Views/Panels/ItemExplorerPanel.axaml
@@ -22,8 +22,8 @@
                 </ia:EventTriggerBehavior>
             </i:Interaction.Behaviors>
         </TextBox>
-        <ScrollViewer Grid.Row="1">
-            <TreeView Name="Viewer" SelectionMode="Single"/>
-        </ScrollViewer>
+        <!--<ScrollViewer Grid.Row="1">-->
+            <TreeDataGrid Grid.Row="1" Name="Viewer" Source="{Binding Source}"/>
+        <!--</ScrollViewer>-->
     </Grid>
 </UserControl>
