--- a/src/SerialLoops/Views/Editors/GroupSelectionEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/GroupSelectionEditorView.axaml
@@ -5,16 +5,21 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:assets="using:SerialLoops.Assets"
              xmlns:controls="using:SerialLoops.Controls"
+             xmlns:utility="using:SerialLoops.Utility"
              xmlns:gbox="using:GroupBox.Avalonia.Controls"
              xmlns:hlib="using:HaruhiChokuretsuLib.Archive.Event"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:DataType="vm:GroupSelectionEditorViewModel"
              x:Class="SerialLoops.Views.Editors.GroupSelectionEditorView">
+    <UserControl.Resources>
+        <utility:TextSubstitutionConverter x:Key="TextSubstitutionConverter"/>
+    </UserControl.Resources>
+    
     <ScrollViewer>
         <ItemsControl ItemsSource="{Binding GroupSelection.Selection.Activities}">
             <ItemsControl.DataTemplates>
                 <DataTemplate DataType="hlib:ScenarioActivity">
-                    <gbox:GroupBox Header="{Binding Title}" Theme="{StaticResource GroupBoxClassic}">
+                    <gbox:GroupBox Header="{Binding Title, Converter={StaticResource TextSubstitutionConverter}}" Theme="{StaticResource GroupBoxClassic}">
                         <StackPanel Orientation="Vertical" Spacing="5" Margin="3">
                             <StackPanel Orientation="Horizontal" Spacing="5">
                                 <TextBlock Text="{x:Static assets:Strings.Haruhi_Present}"/>
@@ -26,31 +31,31 @@
                             </StackPanel>
                             <StackPanel Orientation="Horizontal" Spacing="5">
                                 <TextBlock Text="{x:Static assets:Strings.Future_Description}"/>
-                                <TextBox Height="50" Width="400" Text="{Binding FutureDesc}"/>
+                                <TextBox Height="50" Width="400" Text="{Binding FutureDesc, Converter={StaticResource TextSubstitutionConverter}}"/>
                             </StackPanel>
                             <StackPanel Orientation="Horizontal" Spacing="5">
                                 <TextBlock Text="{x:Static assets:Strings.Past_Description}"/>
-                                <TextBox Height="50" Width="400" Text="{Binding PastDesc}"/>
+                                <TextBox Height="50" Width="400" Text="{Binding PastDesc, Converter={StaticResource TextSubstitutionConverter}}"/>
                             </StackPanel>
-                            <!--<gbox:GroupBox Header="{x:Static assets:Strings.Optimal_Group}">
+                            <gbox:GroupBox Header="{x:Static assets:Strings.Optimal_Group}">
                                 <StackPanel Orientation="Horizontal" Spacing="5">
-                                    <TextBlock Text="{Binding OptimalGroup.FirstMember}"/>
-                                    <TextBlock Text="{Binding OptimalGroup.SecondMember}"/>
-                                    <TextBlock Text="{Binding OptimalGroup.ThirdMember}"/>
+                                    <TextBlock Text="{Binding OptimalGroup[0]}"/>
+                                    <TextBlock Text="{Binding OptimalGroup[1]}"/>
+                                    <TextBlock Text="{Binding OptimalGroup[2]}"/>
                                 </StackPanel>
                             </gbox:GroupBox>
                             <gbox:GroupBox Header="{x:Static assets:Strings.Worst_Group}">
                                 <StackPanel Orientation="Horizontal" Spacing="5">
-                                    <TextBlock Text="{Binding WorstGroup.FirstMember}"/>
-                                    <TextBlock Text="{Binding WorstGroup.SecondMember}"/>
-                                    <TextBlock Text="{Binding WorstGroup.ThirdMember}"/>
+                                    <TextBlock Text="{Binding WorstGroup[0]}"/>
+                                    <TextBlock Text="{Binding WorstGroup[1]}"/>
+                                    <TextBlock Text="{Binding WorstGroup[2]}"/>
                                 </StackPanel>
-                            </gbox:GroupBox>-->
-                            <gbox:GroupBox Header="{x:Static assets:Strings.Routes}" Theme="{StaticResource GroupBoxClassic}">
+                            </gbox:GroupBox>
+                            <gbox:GroupBox Header="{x:Static assets:Strings.Routes}" Theme="{StaticResource GroupBoxClassic}" Margin="10">
                                 <ItemsControl ItemsSource="{Binding Routes}">
                                     <ItemsControl.DataTemplates>
                                         <DataTemplate x:DataType="hlib:ScenarioRoute">
-                                            <gbox:GroupBox Header="{Binding Title}" Theme="{StaticResource GroupBoxClassic}">
+                                            <gbox:GroupBox Header="{Binding Title, Converter={StaticResource TextSubstitutionConverter}}" Theme="{StaticResource GroupBoxClassic}" Margin="5">
                                                 <StackPanel Orientation="Vertical" Spacing="3">
                                                     <StackPanel Orientation="Horizontal" Spacing="5">
                                                         <TextBlock Text="{x:Static assets:Strings.Script}"/>
@@ -58,14 +63,14 @@
                                                     </StackPanel>
                                                     <StackPanel Orientation="Horizontal" Spacing="5">
                                                         <TextBlock Text="{x:Static assets:Strings.Characters_Involved}"/>
-                                                        <TextBlock Text="{Binding CharactersInvolved}"/>
+                                                        <TextBlock Text="{Binding CharactersInvolved, Converter={x:Static utility:SLConverters.ListDisplayConverter}}"/>
                                                     </StackPanel>
-                                                    <gbox:GroupBox Header="{x:Static assets:Strings.Kyonless_Topics}" Theme="{StaticResource GroupBoxClassic}">
+                                                    <gbox:GroupBox Header="{x:Static assets:Strings.Kyonless_Topics}" Theme="{StaticResource GroupBoxClassic}" Margin="3">
                                                         <StackPanel Orientation="Vertical" Spacing="3">
                                                             <ItemsControl ItemsSource="{Binding KyonlessTopics}">
                                                                 <ItemsControl.DataTemplates>
                                                                     <DataTemplate x:DataType="hlib:Topic">
-                                                                        <TextBlock Text="{Binding Title}"/>
+                                                                        <TextBlock Text="{Binding Title, Converter={StaticResource TextSubstitutionConverter}}"/>
                                                                     </DataTemplate>
                                                                 </ItemsControl.DataTemplates>
                                                             </ItemsControl>
