--- a/src/SerialLoops/Views/Editors/ScriptEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/ScriptEditorView.axaml
@@ -4,11 +4,42 @@
              xmlns:vm="using:SerialLoops.ViewModels.Editors"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+             xmlns:utility="using:SerialLoops.Utility"
              x:DataType="vm:ScriptEditorViewModel"
              x:Class="SerialLoops.Views.Editors.ScriptEditorView">
-    <Grid ColumnDefinitions="Auto,*" RowDefinitions="Auto,*">
-        <TreeDataGrid Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="1" Source="{Binding Source}">
-            
-        </TreeDataGrid>
+    <Grid ColumnDefinitions="Auto,*" RowDefinitions="Auto,Auto,*">
+        <StackPanel Grid.Column="0" Grid.Row="0" Margin="5" Spacing="5" HorizontalAlignment="Right" Orientation="Horizontal">
+            <Button Command="{Binding AddScriptCommandCommand}">
+                <Svg Path="avares://SerialLoops/Assets/Icons/Add.svg" Width="22"/>
+            </Button>
+            <Button Command="{Binding AddScriptSectionCommand}">
+                <Svg Path="avares://SerialLoops/Assets/Icons/Add_Section.svg" Width="22"/>
+            </Button>
+            <Button Command="{Binding DeleteScriptCommandOrSectionCommand}">
+                <Svg Path="avares://SerialLoops/Assets/Icons/Remove.svg" Width="22"/>
+            </Button>
+            <Button Command="{Binding ClearScriptCommand}">
+                <Svg Path="avares://SerialLoops/Assets/Icons/Clear.svg" Width="22"/>
+            </Button>
+        </StackPanel>
+        <TreeDataGrid Grid.Column="0" Grid.Row="1" Grid.RowSpan="2" Source="{Binding Source}"/>
+        <Grid Grid.Column="1" Grid.Row="1" ColumnDefinitions="Auto,*" RowDefinitions="Auto,Auto">
+            <Image Source="{Binding PreviewBitmap, Converter={x:Static utility:SLConverters.SKBitmapToAvaloniaConverter}}"
+                   Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" Width="256"/>
+            <TabControl Grid.Column="1" Grid.Row="0">
+                <TabControl.Items>
+                    <TabItem Header="Starting Chibis">
+                        
+                    </TabItem>
+                    <TabItem Header="Map Characters">
+                        
+                    </TabItem>
+                </TabControl.Items>
+            </TabControl>
+            <StackPanel Grid.Column="1" Grid.Row="1">
+                
+            </StackPanel>
+        </Grid>
+        <ContentPresenter Grid.Column="1" Grid.Row="2" Margin="5" DataContext="{Binding CurrentCommandViewModel}" Content="{Binding}"/>
     </Grid>
 </UserControl>
