Add SCREEN_FADEOUT command

--- a/src/SerialLoops/App.axaml
+++ b/src/SerialLoops/App.axaml
@@ -31,6 +31,7 @@
         <tabaloniathemes:CustomTheme/>
         <mintoolbarthemes:MiniToolbarStyles/>
         <StyleInclude Source="avares://Avalonia.Controls.TreeDataGrid/Themes/Fluent.axaml"/>
+        <StyleInclude Source="avares://Avalonia.Controls.ColorPicker/Themes/Fluent/Fluent.xaml" />
         <Style Selector="TextBlock.h1">
             <Setter Property="FontSize" Value="32"/>
             <Setter Property="FontWeight" Value="Bold"/>
