--- a/src/SerialLoops/Views/Editors/ScriptCommandEditors/EmptyScriptCommandEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/ScriptCommandEditors/EmptyScriptCommandEditorView.axaml
@@ -1,9 +1,9 @@
 <UserControl xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:vm="using:SerialLoops.ViewModels.Editors.ScriptCommandEditors"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:controls="using:SerialLoops.Controls"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="SerialLoops.Controls.ItemLink">
-    <controls:LinkButton Name="Link" OnClick="Link_PointerPressed" Text="NONE" />
+             x:DataType="vm:EmptyScriptCommandEditorViewModel"
+             x:Class="SerialLoops.Views.Editors.ScriptCommandEditors.EmptyScriptCommandEditorView">
 </UserControl>
