--- a/src/SerialLoops/Views/Editors/TopicEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/TopicEditorView.axaml
@@ -10,7 +10,7 @@
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:DataType="vm:TopicEditorViewModel"
              x:Class="SerialLoops.Views.Editors.TopicEditorView">
-    <Grid ColumnDefinitions="Auto,Auto" RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto">
+    <Grid ColumnDefinitions="Auto,Auto" RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto" Margin="10">
         <TextBlock Grid.Column="0" Grid.Row="0" Text="{x:Static assets:Strings.ID}"/>
         <TextBlock Grid.Column="1" Grid.Row="0" Margin="10,0,0,0" Text="{Binding Topic.TopicEntry.Id}"/>
 
@@ -53,7 +53,7 @@
 
                 <TextBlock Grid.Column="0" Grid.Row="1" Margin="0,7,0,0" Text="{x:Static assets:Strings.Kyon_Time_Percentage}"/>
                 <StackPanel Grid.Column="1" Grid.Row="1" Margin="10,0,0,0" Orientation="Horizontal">
-                    <NumericUpDown Value="{Binding KyonTimePercentage}" Minimum="0" Maximum="100"
+                    <NumericUpDown Value="{Binding KyonTimePercentage}" Minimum="0" Maximum="{Binding MaxShort}"
                                    FormatString="N0" Increment="1" ParsingNumberStyle="Integer"/>
                     <TextBlock Text="{x:Static assets:Strings._}"/>
                 </StackPanel>
@@ -64,7 +64,7 @@
 
                 <TextBlock Grid.Column="0" Grid.Row="2" Margin="0,7,0,0" Text="{x:Static assets:Strings.Mikuru_Time_Percentage}"/>
                 <StackPanel Grid.Column="1" Grid.Row="2" Margin="10,0,0,0" Orientation="Horizontal">
-                    <NumericUpDown Value="{Binding MikuruTimePercentage}" Minimum="0" Maximum="100"
+                    <NumericUpDown Value="{Binding MikuruTimePercentage}" Minimum="0" Maximum="{Binding MaxShort}"
                                    FormatString="N0" Increment="1" ParsingNumberStyle="Integer"/>
                     <TextBlock Text="{x:Static assets:Strings._}"/>
                 </StackPanel>
@@ -75,7 +75,7 @@
 
                 <TextBlock Grid.Column="0" Grid.Row="3" Margin="0,7,0,0" Text="{x:Static assets:Strings.Nagato_Time_Percentage}"/>
                 <StackPanel Grid.Column="1" Grid.Row="3" Margin="10,0,0,0" Orientation="Horizontal">
-                    <NumericUpDown Value="{Binding NagatoTimePercentage}" Minimum="0" Maximum="100"
+                    <NumericUpDown Value="{Binding NagatoTimePercentage}" Minimum="0" Maximum="{Binding MaxShort}"
                                    FormatString="N0" Increment="1" ParsingNumberStyle="Integer"/>
                     <TextBlock Text="{x:Static assets:Strings._}"/>
                 </StackPanel>
@@ -86,7 +86,7 @@
 
                 <TextBlock Grid.Column="0" Grid.Row="4" Margin="0,7,0,0" Text="{x:Static assets:Strings.Koizumi_Time_Percentage}"/>
                 <StackPanel Grid.Column="1" Grid.Row="4" Margin="10,0,0,0" Orientation="Horizontal">
-                    <NumericUpDown Value="{Binding KoizumiTimePercentage}" Minimum="0" Maximum="100"
+                    <NumericUpDown Value="{Binding KoizumiTimePercentage}" Minimum="0" Maximum="{Binding MaxShort}"
                                    FormatString="N0" Increment="1" ParsingNumberStyle="Integer"/>
                     <TextBlock Text="{x:Static assets:Strings._}"/>
                 </StackPanel>
