--- a/src/SerialLoops/Views/Editors/GroupSelectionEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/GroupSelectionEditorView.axaml
@@ -8,20 +8,16 @@
              xmlns:utility="using:SerialLoops.Utility"
              xmlns:gbox="using:GroupBox.Avalonia.Controls"
              xmlns:items="using:SerialLoops.Lib.Items"
-             xmlns:hlib="using:HaruhiChokuretsuLib.Archive.Event"
              xmlns:editors="clr-namespace:SerialLoops.Views.Editors"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:DataType="vm:GroupSelectionEditorViewModel"
              x:Class="SerialLoops.Views.Editors.GroupSelectionEditorView">
-    <UserControl.Resources>
-        <utility:TextSubstitutionConverter x:Key="TextSubstitutionConverter"/>
-    </UserControl.Resources>
 
     <ScrollViewer>
         <ItemsControl ItemsSource="{Binding Activities}">
             <ItemsControl.DataTemplates>
                 <DataTemplate DataType="vm:ScenarioActivityViewModel">
-                    <gbox:GroupBox Header="{Binding Title, Converter={StaticResource TextSubstitutionConverter}}" Theme="{StaticResource GroupBoxClassic}">
+                    <gbox:GroupBox Header="{Binding Title}" Theme="{StaticResource GroupBoxClassic}">
                         <StackPanel Orientation="Vertical" Spacing="5" Margin="3">
                             <StackPanel Orientation="Horizontal" Spacing="5">
                                 <TextBlock Text="{x:Static assets:Strings.Haruhi_Present}"/>
@@ -33,11 +29,11 @@
                             </StackPanel>
                             <StackPanel Orientation="Horizontal" Spacing="5">
                                 <TextBlock Text="{x:Static assets:Strings.Future_Description}"/>
-                                <TextBox Height="50" Width="400" Text="{Binding FutureDesc, Converter={StaticResource TextSubstitutionConverter}}"/>
+                                <TextBox Height="50" Width="400" Text="{Binding FutureDesc}"/>
                             </StackPanel>
                             <StackPanel Orientation="Horizontal" Spacing="5">
                                 <TextBlock Text="{x:Static assets:Strings.Past_Description}"/>
-                                <TextBox Height="50" Width="400" Text="{Binding PastDesc, Converter={StaticResource TextSubstitutionConverter}}"/>
+                                <TextBox Height="50" Width="400" Text="{Binding PastDesc}"/>
                             </StackPanel>
                             <gbox:GroupBox Header="{x:Static assets:Strings.Optimal_Group}">
                                 <StackPanel Orientation="Horizontal" Spacing="5">
@@ -57,7 +53,7 @@
                                 <ItemsControl ItemsSource="{Binding Routes}">
                                     <ItemsControl.DataTemplates>
                                         <DataTemplate x:DataType="vm:ScenarioRouteViewModel">
-                                            <gbox:GroupBox Header="{Binding Title, Converter={StaticResource TextSubstitutionConverter}}" Theme="{StaticResource GroupBoxClassic}" Margin="5">
+                                            <gbox:GroupBox Header="{Binding Title}" Theme="{StaticResource GroupBoxClassic}" Margin="5">
                                                 <StackPanel Orientation="Vertical" Spacing="3">
                                                     <StackPanel Orientation="Horizontal" Spacing="5">
                                                         <TextBlock Text="{x:Static assets:Strings.Script}"/>
